General Code Cleanup
