# src/main/java/com/redhat/composer/api/mapper/ContentRetrieverConnectionAdminMapper.java
@@ -3,18 +3,15 @@ package com.redhat.composer.api.mapper;
 import com.redhat.composer.api.model.BaseRetrieverConnection;
 import com.redhat.composer.api.model.CreateRetrieverConnectionRequest;
 import com.redhat.composer.api.model.ElasticsearchConnection;
-import com.redhat.composer.api.model.Neo4JConnection;
 import com.redhat.composer.api.model.RetrieverConnection;
 import com.redhat.composer.api.model.WeaviateConnection;
 import com.redhat.composer.model.mongo.RetrieverConnectionEntity;
 import com.redhat.composer.model.mongo.contentretrieverentites.BaseRetrieverConnectionEntity;
 import com.redhat.composer.model.mongo.contentretrieverentites.ElasticsearchConnectionEntity;
-import com.redhat.composer.model.mongo.contentretrieverentites.Neo4jEntity;
 import com.redhat.composer.model.mongo.contentretrieverentites.WeaviateConnectionEntity;
 import com.redhat.composer.model.request.RetrieverRequest;
 import com.redhat.composer.model.request.retriever.BaseRetrieverRequest;
 import com.redhat.composer.model.request.retriever.ElasticsearchRequest;
-import com.redhat.composer.model.request.retriever.Neo4JRequest;
 import com.redhat.composer.model.request.retriever.WeaviateRequest;
 import com.redhat.composer.util.mappers.BsonMapper;
 import com.redhat.composer.util.mappers.QuarkusMapperConfig;
@@ -48,7 +45,6 @@ public interface ContentRetrieverConnectionAdminMapper {
    * @return the internal representation of a request
    */
   @SubclassMapping(target = ElasticsearchRequest.class, source = ElasticsearchConnection.class)
-  @SubclassMapping(target = Neo4JRequest.class, source = Neo4JConnection.class)
   @SubclassMapping(target = WeaviateRequest.class, source = WeaviateConnection.class)
   BaseRetrieverRequest fromRest(BaseRetrieverConnection request);
 
@@ -67,7 +63,6 @@ public interface ContentRetrieverConnectionAdminMapper {
    * @return a REST representation of the entity
    */
   @SubclassMapping(target = ElasticsearchConnection.class, source = ElasticsearchConnectionEntity.class)
-  @SubclassMapping(target = Neo4JConnection.class, source = Neo4jEntity.class)
   @SubclassMapping(target = WeaviateConnection.class, source = WeaviateConnectionEntity.class)
   BaseRetrieverConnection toRest(BaseRetrieverConnectionEntity baseEntity);
 
