# src/main/java/com/redhat/composer/api/nonspec/LlmApi.java
@@ -1,11 +1,8 @@
 package com.redhat.composer.api.nonspec;
 
-import com.redhat.composer.config.llm.models.streaming.StreamingBaseModel;
-import com.redhat.composer.config.llm.models.streaming.StreamingModelFactory;
-import com.redhat.composer.config.llm.models.synchronous.SynchronousBaseModel;
-import com.redhat.composer.config.llm.models.synchronous.SynchronousModelFactory;
+import com.redhat.composer.components.servingRuntime.streaming.StreamingServingRuntime;
+import com.redhat.composer.components.servingRuntime.streaming.StreamingServingRuntimeFactory;
 import com.redhat.composer.model.request.LLMRequest;
-import dev.langchain4j.model.chat.ChatLanguageModel;
 import dev.langchain4j.model.chat.StreamingChatLanguageModel;
 import dev.langchain4j.service.AiServices;
 import io.smallrye.mutiny.Multi;
@@ -24,28 +21,7 @@ public class LlmApi {
   Logger log = Logger.getLogger(LlmApi.class);
 
   @Inject
-  SynchronousModelFactory synchronousModelFactory;
-
-  @Inject
-  StreamingModelFactory streamingModelFactory;
-
-  /**
-   * Generate a response for a message.
-   * @param request the LLMRequest
-   * @param message message from LLM
-   * @return the response
-   */
-  @POST
-  @Path("/generate")
-  public String syncRequest(LLMRequest request, @QueryParam("message") String message) {
-    log.info("Generating response for message: " + message);
-    if (request == null) {
-      request = new LLMRequest();
-    }
-    SynchronousBaseModel model = synchronousModelFactory.getModel(request.getModelType());
-    ChatLanguageModel llm = model.getChatModel(request);
-    return llm.generate(message);
-  }
+  StreamingServingRuntimeFactory streamingModelFactory;
 
   /**
    * Generate a response for a message.
@@ -60,13 +36,12 @@ public class LlmApi {
     if (request == null) {
       request = new LLMRequest();
     }
-    StreamingBaseModel model = streamingModelFactory.getModel(request.getModelType());
+    StreamingServingRuntime model = streamingModelFactory.getServingRuntime(request.getModelType());
 
     StreamingChatLanguageModel llm = model.getChatModel(request);
     Assistant assistant = AiServices.create(Assistant.class, llm);
 
-    Multi<String> response = assistant.chat(message);
-    return response;
+    return assistant.chat(message);
   }
 
   interface Assistant {
