# src/main/resources/META-INF/openapi.yml
@@ -182,6 +182,8 @@ paths:
                   type: string
                 modelType:
                   type: string
+                servingRuntime:
+                  type: string
                 url:
                   type: string
                 apiKey:
@@ -450,7 +452,6 @@ components:
       type: string
       enum:
         - weaviate
-        - neo4j
         - elasticsearch
 
     # Domain IDs
@@ -513,13 +514,11 @@ components:
           $ref: '#/components/schemas/ContentRetrieverType'
       oneOf:
         - $ref: '#/components/schemas/ElasticsearchConnection'
-        - $ref: '#/components/schemas/Neo4JConnection'
         - $ref: '#/components/schemas/WeaviateConnection'
       discriminator:
         propertyName: contentRetrieverType
         mapping:
           elasticsearch: '#/components/schemas/ElasticsearchConnection'
-          neo4j: '#/components/schemas/Neo4JConnection'
           weaviate: '#/components/schemas/WeaviateConnection'
     ElasticsearchConnection:
       type: object
@@ -545,12 +544,6 @@ components:
               type: string
             password:
               type: string
-    Neo4JConnection:
-      type: object
-      x-discriminator-value: neo4j
-      allOf:
-        - $ref: '#/components/schemas/BaseRetrieverConnection'
-        - properties: { }
     WeaviateConnection:
       type: object
       x-discriminator-value: weaviate
@@ -581,6 +574,8 @@ components:
         description:
           type: string
         modelType:
+          type: string
+        servingRuntimeType:
           type: string
         url:
           type: string
